# Alice-brain-Hermes

./: .gitignore  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
.agents/skills/operating-alice-brain-hermes/: SKILL.md
.github/workflows/: portable-runtime.yml
docs/: research-basis.md
docs/superpowers/plans/: 2026-07-14-alice-brain-hermes-standalone.md  2026-07-15-hermes-worker-fault-containment.md  2026-07-16-alice-brain-hermes-operational-skill.md
docs/superpowers/specs/: 2026-07-14-alice-brain-hermes-design.md  2026-07-15-hermes-worker-fault-containment-design.md  2026-07-16-alice-brain-hermes-operational-skill-design.md
integration/alice-brain/: __init__.py
scripts/: __init__.py  check_independence.py
src/alice_brain_hermes/: __init__.py  cli.py  errors.py  hermes_plugin.py  ids.py  projections.py
src/alice_brain_hermes/core/: __init__.py  action.py  cognition.py  events.py  identity.py  limits.py  personality.py  reducer.py  state.py  workspace.py  world.py
src/alice_brain_hermes/hermes/: __init__.py  bridge.py  cli.py  energy.py  energy_client.py  hooks.py  identity.py  identity_client.py  registration.py
src/alice_brain_hermes/protocol/: __init__.py  (+7 more)
tests/: conftest.py  test_independence.py  test_package.py  test_portable_runtime_policy.py
tests/cli/: test_cli.py
tests/core/: test_action_receipts.py  test_bounded_working_set.py  test_consciousness.py  test_energy_evidence.py  test_reducer.py
tests/hermes/: test_capture_capacity.py  test_energy_client.py  test_energy_registration.py  test_energy_worker.py  test_hermes_cli.py  test_hooks.py  test_host_wiring.py  test_identity_client.py  test_identity_worker.py  test_nonblocking.py  test_registration.py
tests/protocol/: test_client.py  test_daemon.py  test_diagnostics.py  test_energy.py  test_models.py  test_runtime_status.py  test_service.py
tests/runtime/: test_action_snapshot_migration.py  test_bridge_store.py  test_daemon_failstop_process.py  test_daemon_foundation.py  test_daemon_runtime.py  test_discovery.py  test_energy_assessment_runtime.py  test_identity_naming.py  test_portable_runtime_ownership.py  test_scheduler.py  test_semantic_bridge_batch.py  test_semantic_ingest.py  test_snapshot_worker.py  test_sqlite_startup_owner.py  test_store.py  test_supervisor.py
(+12 files in other folders)
