[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "alice-brain-hermes"
version = "0.1.0"
description = "Independent engineering-consciousness runtime and Hermes Agent plugin"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "packaging>=24,<27",
    "platformdirs>=4.9,<4.10",
    "portalocker>=3.2,<3.3",
    "pydantic>=2.12,<3",
    "psutil==7.2.2",
    "python-dmon==0.3.0",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "hermes-agent==0.18.2",
    "pytest>=9,<10",
    "ruff>=0.12,<1",
]

[project.scripts]
alice-brain-hermes = "alice_brain_hermes.cli:main"

[project.entry-points."hermes_agent.plugins"]
alice-brain = "alice_brain_hermes.hermes_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/alice_brain_hermes"]

[tool.hatch.build.targets.wheel.force-include]
"skills/operating-alice-brain-hermes" = "alice_brain_hermes/skills/operating-alice-brain-hermes"

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
